kubernetes/apps/base/media/arr/plex/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: plex
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`plex.theblacklodge.dev`)
      kind: Rule
      services:
        - name: plex
          port: 32400
